# pglogical

./: README.md  pyproject.toml
.docker/pg/: Dockerfile  init.sql
src/: app.py  settings.py
src/lib/: consumer.py  models.py
src/lib/pypgoutput/: decoders.py
